<resources>
    <string name="app_name" translatable="false">Hey Buddy!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="email" translatable="false">Email...</string>
    <string name="guide" translatable="false">guide</string>
    <string name="password" translatable="false">Password...</string>
    <string name="login" translatable="false">Login</string>
    <string name="menu_guide" translatable="false">Guide</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_set" translatable="false">Matching Set</string>
    <string name="signup" translatable="false">Create Account</string>
    <string name="already_have_account" translatable="false">Already have an account?</string>
    <string name="username" translatable="false">Display name</string>
    <string name="menu_list" translatable="false">Matching List</string>
    <string name="menu_profile" translatable="false">My Profile</string>
    <string name="message" translatable="false">Message...</string>
    <string name="menu_point" translatable="false">My Point</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="logging_in" translatable="false">Signing in</string>
    <string name="find_friend" translatable="false">Find friends</string>
    <string name="log_out" translatable="false">Log out</string>
    <string name="request" translatable="false">Request</string>
    <string name="add_friend" translatable="false">Add friend</string>
    <string name="cancel_invite" translatable="false">Cancel invite</string>
    <string name="sent_req_to" translatable="false">"You have sent request to "</string>
    <string name="req_sent" translatable="false">Request sent</string>
    <string name="display_name" translatable="false">Display User Name</string>
    <string name="register_success_popup" translatable="false">Registered successfully.\nVerification email has been sent.\nPlease verify email.</string>
    <string name="default_status" translatable="false">Introduce</string>
    <string name="default_keyword" translatable="false">Please fill in the fields of interest</string>
    <string name="rememberlogin" translatable="false">Remember your login information</string>
    <string name="newaccount" translatable="false">New here? Create an account</string>
    <string name="wait" translatable="false">Please wait a moment....</string>
    <string name="accounting" translatable="false">Creating new account</string>
    <string name="location" translatable="false">Location </string>
    <string name="languagechoice" translatable="false">choose language you can speak </string>
    <string name="English" translatable="false">English </string>
    <string name="Korean" translatable="false">Korean </string>
    <string name="korean" translatable="false">korean</string>
    <string name="Chinese" translatable="false">Chinese </string>
    <string name="interestchoice" translatable="false">What are you interested in? </string>
    <string name="restaurant" translatable="false">Restaurant</string>
    <string name="culture" translatable="false">Culture</string>
    <string name="show" translatable="false">Show</string>
    <string name="art" translatable="false">Art</string>
    <string name="shopping" translatable="false">Shopping</string>
    <string name="sights" translatable="false">Sights</string>
    <string name="walk" translatable="false">Walk</string>
    <string name="traveler" translatable="false">Traveler</string>
    <string name="local" translatable="false">Local</string>
    <string name="travelperiod" translatable="false">When do you travel?</string>
    <string name="startdate" translatable="false">Start date</string>
    <string name="enddate" translatable="false">End date</string>
    <string name="wherevisit" translatable="false">Where are you visiting?</string>
    <string name="complete" translatable="false">Complete</string>
    <string name="feedlist" translatable="false">Feed List</string>

    <string name="menu_wishlist" translatable="false">Wishlist</string>
    <string name="recent" translatable="false">Recent Order</string>
    <string name="likeOrder" translatable="false">Like Order</string>
    <string name="add_to_wishlist" translatable="false">Add to Wishlist</string>
    <string name="remove_wishlist" translatable="false">Remove</string>
    <string name="introduce" translatable="false">introduce</string>

    //가이드 영문 텍스트
    <string name="guidetext1" translatable="false">I downloaded it, but I\'m not sure where to start.</string>
    <string name="guidetext2" translatable="false">What exactly does this app do? What should i do?</string>
    <string name="guidetext3" translatable="false">We have created a guide to help those who are in trouble to use it more smoothly.</string>
    <string name="guidetext4" translatable="false">Use \'hey buddy\' more easier.</string>
    <string name="guidetext5" translatable="false">Shall we start with the feed?</string>
    <string name="guidetext6" translatable="false">1.Browse the feed and find someone you like.</string>
    <string name="guidetext7" translatable="false">The feed is where you can see photos of others. Look at their photos and find your favorite places, restaurants, events and more.</string>
    <string name="guidetext8" translatable="false">Feeds can be sorted in two ways. The order of the latest and the likes. You can see the feeds sorted according to your choice, and you can move the details of the feeds and move the author\'s profile.
</string>
    <string name="guidetext9" translatable="false">How to use feed</string>
    <string name="guidetext10" translatable="false">1. Use the buttons at the top to select the sort\n you want.</string>
    <string name="guidetext11" translatable="false">2. Click the photo to see the original image. \n If you touch the feed, you can see the entire contents\n of the feed.</string>
    <string name="guidetext12" translatable="false">3. If you go to others profile, You can see the feeds\n that the person has written, and tap the feed photo\n to see the entire contents..</string>
    <string name="guidetext13" translatable="false">4. You can send a friend request directly from profile,\n or you can put it on your wish list and make a friend\n later.</string>
    <string name="guidetext14" translatable="false">If you go to your profile, you can see the feeds you liked.</string>
    <string name="guidetext15" translatable="false">By setting the matching conditions, you can select the kind of users you want.</string>
    <string name="guidetext16" translatable="false">Let\'s find a match for you</string>
    <string name="guidetext17" translatable="false">By setting matching conditions, you can find people who meet the conditions.</string>
    <string name="guidetext18" translatable="false">Go matching set in menu, set your language, areas\n of interest, duration of travel, and select the\n region to visit. </string>
    <string name="guidetext19" translatable="false">When all conditions are selected, click the complete\n button. Then you can choose users will be displayed.\n Tap the user and check the feed in their profile.\n If the feeds are interesting"</string>
    <string name="guidetext20" translatable="false">If you add a friend, you should also have a conversation.</string>
    <string name="guidetext21" translatable="false">Now chat with a friend.</string>
    <string name="guidetext22" translatable="false">When you come to Korea for a trip, a friend you made in advance will help. You can ask about tourist spots, and you can ask about small things like restaurants and trails. In addition, there are various problems that you may experience suddenly.
</string>
    <string name="guidetext23" translatable="false">When you enter the menu matching list, matched\n friends appear. Tap the friend to go to the chat\n window and have a conversation.</string>
    <string name="guidetext24" translatable="false">Was the guide helpful? you can use it easy.</string>
    <string name="guidetext25" translatable="false">Now try the matching by following the sequence. There will be a good meeting.</string>
    <string name="evaluation" translatable="false">App Evaluation</string>
    <string name="declaration" translatable="false">Declaration</string>
    <string name="end" translatable="false">Matching End</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_chat_image_viewer" translatable="false">ImageViewer</string>

</resources>
