<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trip2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_set"
        android:name="com.example.trip2.ui.set.SetFragment"
        android:label="@string/menu_set"
        tools:layout="@layout/fragment_set" />

    <fragment
        android:id="@+id/nav_list"
        android:name="com.example.trip2.ui.list.List_Fragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.trip2.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_point"
        android:name="com.example.trip2.ui.point.PointFragment"
        android:label="@string/menu_point"
        tools:layout="@layout/fragment_point" />
    <fragment
        android:id="@+id/nav_request"
        android:name="com.example.trip2.RequestFragment"
        android:label="@string/req_sent"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_matching_list"
        android:name="com.example.trip2.responer_matching_list"
        android:label="List_matching"
        tools:layout="@layout/fragment_responer_matching_list" />

</navigation>