<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="CREATE NEW ACCOUNT"
        android:textColor="@color/PrimaryColor"
        android:textSize="24sp"
        android:layout_marginTop="15sp"
        android:id="@+id/tv_signup"
        />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_signup"
        android:hint="@string/email"
        android:drawableTint="@color/PrimaryColor"
        android:textColorHint="@color/PrimaryColor"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="4sp"
        android:drawableStart="@drawable/email"
        android:layout_marginTop="25sp"
        android:layout_marginLeft="17sp"
        android:layout_marginRight="17sp"
        android:textCursorDrawable="@drawable/pink_cursor"
        />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_email"
        android:hint="@string/password"
        android:drawableTint="@color/PrimaryColor"
        android:textColorHint="@color/PrimaryColor"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:padding="4sp"
        android:drawableStart="@drawable/password"
        android:background="@drawable/inputs"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="17sp"
        android:layout_marginRight="17sp"
        android:textCursorDrawable="@drawable/pink_cursor"
        />
    <EditText
        android:id="@+id/signup_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_password"
        android:hint="Confirm Password"
        android:drawableTint="@color/PrimaryColor"
        android:textColorHint="@color/PrimaryColor"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:padding="4sp"
        android:drawableStart="@drawable/password"
        android:background="@drawable/inputs"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="17sp"
        android:layout_marginRight="17sp"
        android:textCursorDrawable="@drawable/pink_cursor"
        />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_confirm"
        android:text="@string/signup"
        android:padding="4sp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="17sp"
        android:layout_marginRight="17sp"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:background="@drawable/buttons"
        />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_button"
        android:layout_alignParentStart="true"
        android:text="@string/already_have_account"
        android:layout_marginTop="2sp"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="23sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="bold"
        />

</RelativeLayout>